----------------------------------------------------------------------
 OmegaT 1.7.0 Changes
----------------------------------------------------------------------

1.7.0 vs. 1.6.1_04

  23 Enhancements
  18 Bugfixes

----------------------------------------------------------------------
1.7.0

Contains two new filters (XLIFF and Office 2007 XML), many bug fixes, new features, and general improvements

 Implemented requests:

  - Jump to segment #
  http://sourceforge.net/support/tracker.php?aid=1086959

  - Indicate number of results in search window
  http://sourceforge.net/support/tracker.php?aid=1427915

  - Log file l10n and debugging
  http://sourceforge.net/support/tracker.php?aid=1209835

  - Ctrl+Delete, Ctrl+Backspace, and overwriting with Ctrl+i
  http://sourceforge.net/support/tracker.php?aid=1579488

  - Monolingual XLIFF (Okapi) filter
  http://sourceforge.net/support/tracker.php?aid=1649067

  - Apply font to Tag Verification and Project Files windows
  http://sourceforge.net/support/tracker.php?aid=1545636

  - Simplified coloring tags in tag validation window
  http://sourceforge.net/support/tracker.php?aid=1679619

  - Executable alternative to OmegaT.bat
  http://sourceforge.net/support/tracker.php?aid=1692363

  - HTML filters->optional translatable contents in attribute
  http://sourceforge.net/support/tracker.php?aid=1436569

  - (X)HTML: Optional paragraph on BR
  http://sourceforge.net/support/tracker.php?aid=1709400

  - OOo documents, do not show "default language"
  http://sourceforge.net/support/tracker.php?aid=1711953

  - Add direct support for Office 2007 XML
  http://sourceforge.net/support/tracker.php?aid=1589239

  - Do not show quotation marks in glossary pane
  http://sourceforge.net/support/tracker.php?aid=1727409

 Other enhancements:

  - German instant start tutorial

  - Slovenian UI localisation + manual translation

  - Basque UI localisation + manual translation

  - Hungarian UI localisation + manual translation
